# RLBot

./: .gitignore  AGENTS.md  CLAUDE.md  GoodModels.txt  README.md  RESEARCH.md  backtest.py  backtest_sweep.py  config.yaml  data_utils.py  pyproject.toml  requirements.txt  rl_config.py  run_artifacts.py  trading_env.py  train.py  visualize.py
Automation/: README.md  hypotheses.yaml  queue_manifest.json  run_training_queue.py
config/: README.md  config.yaml
docs/: MODAL.md  RESEARCH.md  REVIEW_GUIDE.md  RLBot_Critical_Review.md  RLBot_Design_Review.md  TRAINING.md  claude-review-20260605.md  claude-review-20260609.md  codex-review-20260605.md  evolution-roadmap-progress-20260606.md  fix-sprints-progress-20260609.md  grok-review-20260605.md  project-review-20260609.md  repository-publication-readiness-analysis.md
ibkr_paper/: .gitignore  README.md  contract_map.py  contracts.json  execution_sizing_map.py  ibkr_rebalance.py  requirements.txt  run_ibkr_paper.py
paper_trade/: README.md  paper_trade.py
paper_trade_1/: paper_trade.py
paper_trade_2/: README.txt
rlbot/: __init__.py  baselines.py  data_utils.py  eval_schedule.py  eval_selection.py  inference_load.py  inference_output.py  modal_cloud.py  portfolio_metrics.py  reward_logging.py  reward_terms.py  rl_config.py  run_artifacts.py  stats.py  trading_env.py  training_progress.py  vecnorm_utils.py  visualize.py
scripts/: __init__.py  _bootstrap.py  backtest.py  backtest_sweep.py  compare_checkpoints.py  infer_weights.py  migrate_runs_layout.py  modal_app.py  paper_trade.py  research.py  run_seed_ensemble.sh  (+2 more)
(+84 files in other folders)
